syntax = "proto3";
option go_package = "github.com/xhermitx/gitpulse-tracker/github";

// LIST OF USERNAMES TO FETCH THE DATA FROM
message Profile{
    int64 userID = 1; 
    int64 jobID = 2;
    repeated string usernames = 3;
}

// SUCCESS OR FAILURE
message Response{
    repeated string User = 1;
    bool status = 2;
}

message User{
    string username = 1;
    bool isValid = 2;
}

service github{
    rpc FetchData(Profile) returns (Response);
}